--- a/server/package.json
+++ b/server/package.json
@@ -24,9 +24,11 @@
     "typescript": "^4.8.4"
   },
   "dependencies": {
+    "@types/objects-to-csv": "^1.3.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "node-fetch": "^3.2.10",
+    "objects-to-csv": "^1.3.6",
     "zod": "^3.22.4"
   }
 }
