--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "towersimulator",
+  "name": "atcsimulator",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
     "test": "npm run lint && npm run type-check && jest"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "date-fns": "^3.6.0",
     "move-position": "^2.0.0",
     "react": "^18.2.0",
