--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,9 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/express-ws": "^3.0.4",
     "@types/node": "^18.11.9",
+    "@types/ws": "^8.5.10",
     "nodemon": "^2.0.20",
     "rimraf": "^3.0.2",
     "ts-node": "^10.9.1",
@@ -27,6 +29,8 @@
     "@types/objects-to-csv": "^1.3.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-ws": "^5.0.2",
+    "nanoid": "^5.0.7",
     "node-fetch": "^3.2.10",
     "objects-to-csv": "^1.3.6",
     "zod": "^3.22.4"
