--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.14",
     "@types/express-ws": "^3.0.4",
     "@types/node": "^18.11.9",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@types/objects-to-csv": "^1.3.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-ws": "^5.0.2",
