--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "vite",
     "build": "vite build",
+    "build-gh": "vite build --mode gh",
+    "predeploy": "npm run build-gh",
+    "deploy": "gh-pages -d dist",
     "lint": "eslint --max-warnings 0 \"src/**/*.{js,jsx,ts,tsx}\" --fix",
     "type-check": "tsc",
     "test": "npm run lint && npm run type-check && jest"
@@ -39,6 +42,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-sonarjs": "^0.19.0",
+    "gh-pages": "^6.1.1",
     "jest": "^29.5.0",
     "prettier": "^2.8.7",
     "prop-types": "15.8.1",
