--- a/app/package.json
+++ b/app/package.json
@@ -14,9 +14,9 @@
     "test": "npm run lint && npm run type-check && jest"
   },
   "dependencies": {
+    "array-move": "^4.0.0",
     "axios": "^1.6.8",
     "date-fns": "^3.6.0",
-    "move-position": "^2.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
